# un-plugged-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
sample_docs/: empire_state_knowledge.md  golden_gate_bridge.md  history_of_pizza.md  hoover_dam.md  international_space_station.md  pizza.md
stage-1/: main.py  pyproject.toml
stage-1/src/: __init__.py  chatbot_core.py
stage-2/: README.md  main.py
stage-2/sample_documents/: meeting_notes.txt
stage-2/src/: chatbot_core.py
stage-3/: README.md  main.py  notes.md  pyproject.toml
stage-3/sample_documents/: company_policy.txt  technical_guide.md
stage-3/src/: __init__.py  embedding_model.py  test_embedding.py
stage-4/: README.md  main.py
stage-4/src/: test_vector_store.py  vector_store.py
