[project]
name = "offline-llm-chatbot-series"
version = "0.1.0"
description = "Educational series for building an offline LLM chatbot with RAG - Stage-based learning approach"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

# This is the main repository for the educational series
# Each stage has its own pyproject.toml with specific dependencies
# This file serves as documentation for the overall project

# To get started, navigate to a specific stage:
# cd stage-1 && pip install -e .

dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/offline-llm-chatbot"
Documentation = "https://github.com/yourusername/offline-llm-chatbot"
Repository = "https://github.com/yourusername/offline-llm-chatbot.git"
Issues = "https://github.com/yourusername/offline-llm-chatbot/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Educational series stages:
# stage-1: Project setup & environment (dependencies: rich, colorama)
# stage-2: Document processing (adds: pypdf, python-docx, markdown)
# stage-3: Embeddings (adds: sentence-transformers)
# stage-4: Vector database (adds: chromadb)
# stage-5: Local LLM (adds: llama-cpp-python)
# stage-6: RAG pipeline (orchestrates all components)
# stage-7: Web interface (adds: streamlit)
# stage-8: CLI & automation (adds: click, typer)
# stage-9: Production deployment (adds: docker, containerization)
