[project]
name = "offline-chatbot-stage1"
version = "0.1.0"
description = "Stage 1: Project Setup and Environment - Building an Offline LLM Chatbot"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

# Stage 1 Dependencies: Only what we need for basic setup and testing
dependencies = [
    "colorama>=0.4.6",      # For colored terminal output (makes learning more visual)
    "rich>=13.0.0",         # For beautiful console output and progress bars
]

# Development dependencies for testing and code quality
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Note: We'll add more dependencies in later stages:
# Stage 2: pypdf, python-docx, markdown (document processing)
# Stage 3: sentence-transformers (embeddings)  
# Stage 4: chromadb (vector database)
# Stage 5: llama-cpp-python (local LLM)
# Stage 7: streamlit (web interface) 